application opens from QuoridorApplication